--- a/login.html
+++ b/login.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>CLEVA Huixquilucan - Iniciar Sesión</title>
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
   <header>
@@ -22,30 +21,22 @@
       </nav>
     </div>
   </header>
+
   <main>
     <section class="login-section">
       <div class="login-card">
         <h2>Iniciar Sesión</h2>
-        <!-- Botón oficial de Google -->
-        <div id="g_id_onload"
-             data-client_id="449615619408-p8b0rgriusolkp4ktfr8i2j1lqr3rkaf.apps.googleusercontent.com"
-             data-callback="handleCredentialResponse"
-             data-auto_prompt="false">
-        </div>
-        <div class="g_id_signin"
-             data-type="standard"
-             data-shape="rectangular"
-             data-theme="outline"
-             data-text="sign_in_with"
-             data-size="large"
-             data-logo_alignment="left">
-        </div>
+
+        <!-- Botón personalizado para login completo de Google -->
+        <button id="google-full-login" class="google-full-btn">Iniciar sesión con Google</button>
+
         <button class="dentist-btn" id="dentist-login">Cuenta de Dentista</button>
         <div id="dentist-form" style="display:none;">
           <input type="email" placeholder="Correo del dentista" id="dentist-email">
           <input type="password" placeholder="Contraseña" id="dentist-password">
           <button class="dentist-submit-btn" id="dentist-submit">Iniciar Sesión</button>
         </div>
+
         <p>¿No tienes cuenta? <a href="#" id="show-register">Crear una nueva cuenta</a></p>
         <div id="register-form" style="display:none;">
           <input type="text" placeholder="Nombre" id="register-name">
@@ -56,15 +47,34 @@
       </div>
     </section>
   </main>
+
   <script>
-    function handleCredentialResponse(response) {
-      // Aquí puedes enviar el token a tu backend si lo necesitas
-      localStorage.setItem('isLoggedIn', 'true');
-      window.location.href = 'citas.html';
-    }
+    // Redirige al login completo de Google con correo/contraseña
+    document.getElementById('google-full-login').addEventListener('click', function () {
+      const clientId = '449615619408-p8b0rgriusolkp4ktfr8i2j1lqr3rkaf.apps.googleusercontent.com';
+      const redirectUri = 'http://localhost:3000'; // DEBE coincidir con el configurado en Google
+      const scope = 'email profile openid';
+      const authUrl = `https://accounts.google.com/o/oauth2/v2/auth?response_type=token&client_id=${clientId}&redirect_uri=${redirectUri}&scope=${encodeURIComponent(scope)}&prompt=select_account`;
+
+      window.location.href = authUrl;
+    });
+
+    // Si ya se redirigió con token (desde Google)
+    window.addEventListener('load', () => {
+      const params = new URLSearchParams(window.location.hash.substring(1));
+      const token = params.get('access_token');
+      if (token) {
+        localStorage.setItem('googleToken', token);
+        localStorage.setItem('isLoggedIn', 'true');
+        window.location.href = 'citas.html';
+      }
+    });
+
+    // Login manual para dentistas
     document.getElementById('dentist-login').addEventListener('click', function() {
       document.getElementById('dentist-form').style.display = 'block';
     });
+
     document.getElementById('dentist-submit').addEventListener('click', function() {
       const email = document.getElementById('dentist-email').value;
       const password = document.getElementById('dentist-password').value;
@@ -75,10 +85,12 @@
         alert('Por favor, ingresa correo y contraseña.');
       }
     });
+
     document.getElementById('show-register').addEventListener('click', function(e) {
       e.preventDefault();
       document.getElementById('register-form').style.display = 'block';
     });
+
     document.getElementById('register-submit').addEventListener('click', function() {
       alert('Cuenta creada. Redirigiendo a citas...');
       localStorage.setItem('isLoggedIn', 'true');
@@ -86,4 +98,4 @@
     });
   </script>
 </body>
-</html> 
+</html>
