--- a/login.html
+++ b/login.html
@@ -27,11 +27,11 @@
       <div class="login-card">
         <h2>Iniciar Sesión</h2>
 
-        <!-- Botón personalizado para login completo de Google -->
-        <button id="google-full-login" class="google-full-btn">Iniciar sesión con Google</button>
+        <div id="cliente-login" style="display:none;">
+          <button id="google-full-login" class="google-full-btn">Iniciar sesión con Google</button>
+        </div>
 
-        <button class="dentist-btn" id="dentist-login">Cuenta de Dentista</button>
-        <div id="dentist-form" style="display:none;">
+        <div id="dentista-login" style="display:none;">
           <input type="email" placeholder="Correo del dentista" id="dentist-email">
           <input type="password" placeholder="Contraseña" id="dentist-password">
           <button class="dentist-submit-btn" id="dentist-submit">Iniciar Sesión</button>
@@ -49,38 +49,49 @@
   </main>
 
   <script>
-    // Redirige al login completo de Google con correo/contraseña
+    // Selector desde index.html
+    const hash = window.location.hash;
+    if (hash === "#cliente") {
+      document.getElementById("cliente-login").style.display = "block";
+    } else if (hash === "#dentista") {
+      document.getElementById("dentista-login").style.display = "block";
+    }
+
+    // Login con Google
     document.getElementById('google-full-login').addEventListener('click', function () {
       const clientId = '449615619408-p8b0rgriusolkp4ktfr8i2j1lqr3rkaf.apps.googleusercontent.com';
-      const redirectUri = 'https://tesh249.github.io/clevah/'; // DEBE coincidir con el configurado en Google
+      const redirectUri = 'https://tesh249.github.io/clevah/';
       const scope = 'email profile openid';
       const authUrl = `https://accounts.google.com/o/oauth2/v2/auth?response_type=token&client_id=${clientId}&redirect_uri=${redirectUri}&scope=${encodeURIComponent(scope)}&prompt=select_account`;
 
       window.location.href = authUrl;
     });
 
-    // Si ya se redirigió con token (desde Google)
-    window.addEventListener('load', () => {
-      const params = new URLSearchParams(window.location.hash.substring(1));
-      const token = params.get('access_token');
-      if (token) {
-        localStorage.setItem('googleToken', token);
-        localStorage.setItem('isLoggedIn', 'true');
-        window.location.href = 'citas.html';
+  window.addEventListener('load', () => {
+  const params = new URLSearchParams(window.location.hash.substring(1));
+  const token = params.get('access_token');
+  if (token) {
+    fetch('https://www.googleapis.com/oauth2/v2/userinfo', {
+      headers: {
+        Authorization: `Bearer ${token}`
       }
+    })
+    .then(response => response.json())
+    .then(profile => {
+      localStorage.setItem('googleToken', token);
+      localStorage.setItem('isLoggedIn', 'true');
+      localStorage.setItem('userName', profile.name);  // <- Guarda nombre
+      window.location.href = 'dashboard-cliente.html';
     });
-
-    // Login manual para dentistas
-    document.getElementById('dentist-login').addEventListener('click', function() {
-      document.getElementById('dentist-form').style.display = 'block';
-    });
+  }
+});
 
     document.getElementById('dentist-submit').addEventListener('click', function() {
       const email = document.getElementById('dentist-email').value;
       const password = document.getElementById('dentist-password').value;
       if (email && password) {
         localStorage.setItem('isLoggedIn', 'true');
-        window.location.href = 'citas.html';
+        window.location.href = 'dashboard-dentista.html';
       } else {
         alert('Por favor, ingresa correo y contraseña.');
       }
@@ -92,9 +103,9 @@
     });
 
     document.getElementById('register-submit').addEventListener('click', function() {
-      alert('Cuenta creada. Redirigiendo a citas...');
+      alert('Cuenta creada. Redirigiendo...');
       localStorage.setItem('isLoggedIn', 'true');
-      window.location.href = 'citas.html';
+      window.location.href = 'dashboard-cliente.html';
     });
   </script>
 </body>
