--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
   <meta charset="UTF-8">
   <title>CLEVA Huixquilucan - Inicio</title>
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    .login-circle {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      background: #007BFF;
+      color: white;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 20px auto;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .login-circle:hover {
+      background: #0056b3;
+    }
+    .circle-container {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin: 40px 0;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -12,33 +37,16 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li class="dropdown">
-            <a href="#">Nosotros</a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Sobre Nosotros</a></li>
-              <li><a href="#">Instalaciones</a></li>
-              <li><a href="#">Nuestros Doctores</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#">Tratamientos</a>
-            <ul class="dropdown-menu">
-              <li><a href="diseno-sonrisa.html">Diseño de Sonrisa</a></li>
-              <li><a href="implantologia.html">Implantología</a></li>
-              <li><a href="protesis-bucales.html">Prótesis Bucales</a></li>
-              <li><a href="odontopediatria.html">Odontopediatría</a></li>
-              <li><a href="cirugia-maxilofacial.html">Cirugía Maxilofacial</a></li>
-              <li><a href="endodoncia.html">Endodoncia</a></li>
-              <li><a href="periodoncia.html">Periodoncia</a></li>
-            </ul>
-          </li>
-          <li><a href="dentistas.html">Dentistas</a></li>
+          <li><a href="#">Nosotros</a></li>
+          <li><a href="#">Tratamientos</a></li>
+          <li><a href="#">Dentistas</a></li>
           <li><a href="login.html">Iniciar Sesión</a></li>
           <li><a href="agendar-cita.html">Agendar Cita</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
   <main>
     <section id="inicio-section" class="inicio-banner">
       <div class="banner-content">
@@ -54,43 +62,12 @@
           </div>
         </div>
       </div>
-      <div class="banner-maps">
-        <iframe src="https://www.google.com/maps?q=Av.+Jes%C3%BAs+del+Monte+41,+Huixquilucan,+Estado+de+M%C3%A9xico&output=embed" width="100%" height="250" style="border:0; border-radius:12px; margin-top:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
     </section>
-    <section class="contacto-section">
-      <div class="contacto-card">
-        <div class="contacto-top-bar">
-          <div><strong>¡Llámanos!</strong> 55 1234 5678</div>
-          <div><strong>Escríbenos:</strong> clevadental@gmail.com</div>
-        </div>
-        <div class="contacto-info">
-          <h2>Contáctanos</h2>
-          <p><strong>Dirección:</strong> Av. Jesús del Monte 41, Huixquilucan, Estado de México</p>
-        </div>
-      </div>
+
+    <section class="circle-container">
+      <div class="login-circle" onclick="window.location.href='login.html#cliente'">Cliente</div>
+      <div class="login-circle" onclick="window.location.href='login.html#dentista'">Dentista</div>
     </section>
   </main>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <div id="g_id_onload"
-       data-client_id="TU_CLIENT_ID_DE_GOOGLE"
-       data-login_uri="TU_URL_DE_REDIRECCION"
-       data-auto_prompt="false">
-  </div>
-  <div class="g_id_signin"
-       data-type="standard"
-       data-size="large"
-       data-theme="outline"
-       data-text="sign_in_with"
-       data-shape="rectangular"
-       data-logo_alignment="left">
-  </div>
-  <form action="/login" method="POST">
-    <label for="email">Correo:</label>
-    <input type="email" id="email" name="email" required>
-    <label for="password">Contraseña:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit">Iniciar Sesión</button>
-  </form>
 </body>
 </html>
